# GraphIQ

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  brandguidelines.md  docker-entrypoint.sh  instruction.md  pyproject.toml
app/: main.py
app/api/: routes.py  schemas.py
app/core/: config.py  exceptions.py
app/core/dsl/: enums.py  filters.py  intents.py
app/core/registry/: definitions.py  join_graph.py  schema_registry.py
app/handlers/: aggregation.py  base.py  broken_flow.py  compound.py  entity_list.py  entity_lookup.py  flow_trace.py  out_of_scope.py
app/llm/: client.py  fallback_chain.py  structured_parser.py
app/llm/adapters/: gemini.py  groq.py  openrouter.py
app/llm/prompts/: intent_extraction.py  prose_generation.py
app/query/: cypher_builder.py  sql_builder.py  store_router.py
app/router/: intent_router.py
app/services/: alias_resolver.py  query_service.py
app/storage/: neo4j.py  postgres.py
app/supervision/: event_bus.py  request_context.py
app/supervision/guardrails/: chain.py
app/supervision/observers/: observers.py
frontend/: index.html  package-lock.json  package.json  vercel.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatSidebar.jsx  GraphCanvas.jsx  NodeCard.jsx
frontend/src/context/: GraphSyncContext.jsx
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
scripts/: ingest_data.py  neo4j_bootstrap.py
session_logs/antigravity_export/: Fixing Payment-Customer Relationships.md
